--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,4 @@ name: Zombageddon
 main: nu.nerd.zombageddon.Zombageddon
 description: Zombie apocalypse plugin
 version: ${project.version}
+depend: [MirrorMirror]
