--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -13,3 +13,22 @@ torch_destruction: true
 
 # Zombies will go out of their way to seek torches on the way to players
 torch_seeking: true
+
+# Add more zombies near players instead of relying on vanilla spawning
+spawning: true
+
+# Hard cap for zombie spawning. No more will spawn if the living entity populaton is greater or equal to this
+spawning_cap: 3000
+
+# How often (in ticks) the horde spawner should run
+spawning_frequency: 100
+
+# The maximum number of attempts the spawner will make per player per run
+spawning_attempts: 5
+
+# Maximum light level for zombies to spawn (0-16)
+spawning_light: 7
+
+# Distance from the player that new zombies should spawn
+spawning_radius_max: 80
+spawning_radius_min: 24
