Adding more breakable materials.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -37,5 +37,56 @@ spawning_radius_min: 24
 # Set to "[]" to disable completely.
 breakable_materials:
   DIRT: 10
+  SNOW: 30
+  CLAY: 30
+  BRICK: 90
+  GRASS: 30
+  WOOD: 30
+  LOG: 60
+  WORKBENCH: 60
+  WOOL: 30
+  WOODEN_DOOR: 30
+  GLASS: 15
   THIN_GLASS: 15
+  WOOD_DOOR: 30
+  IRON_DOOR: 90
+  LEAVES: 2
+  SAND: 30
+  OBSIDIAN: 240
+  PUMPKIN: 30
+  WOOD_STAIRS: 30
+  COBBLESTONE_STAIRS: 60
+  BRICK_STAIRS: 60
+  SMOOTH_STAIRS: 60
+  SMOOTH_BRICK: 60
+  CHEST: 30
+  FURNACE: 60
+  COBBLESTONE: 60
   STONE: 45
+  GRAVEL: 30
+  IRON_ORE: 60
+  GOLD_ORE: 60
+  COAL_ORE: 60
+  IRON_BLOCK: 180
+  GOLD_BLOCK: 120
+  DIAMOND_BLOCK: 240
+  LAPIS_BLOCK: 90
+  LAPIS_ORE: 60
+  ICE: 15
+  STEP: 60
+  DOUBLE_STEP: 60
+  GLOWSTONE: 30
+  FENCE: 60
+  IRON_FENCE: 120
+  FENCE_GATE: 30
+  NETHER_BRICK: 60
+  NETHER_FENCE: 60
+  NETHER_BRICK_STAIRS: 60
+  NETHERRACK: 60
+  HUGE_MUSHROOM_1: 30
+  HUGE_MUSHROOM_2: 30
+  MELON_BLOCK: 15
+  CACTUS: 15
+  LADDER: 15
+  TRAP_DOOR: 30
+  JUKEBOX: 30
